--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,101 @@
+@import url(https://fonts.googleapis.com/css?family=Indie+Flower);
+
+body {
+background-image: url("http://photosinbox.com/wp-content/uploads/2012/02/tic-tac-toe.jpg");
+opacity: 0.9;
+background-size: cover;
+}
 
 h1 {
-  font-style: italic;
+  font-family: 'Indie Flower', cursive;
   text-align: center;
-  display: block;
-  text-shadow: 1px 2px brown;
+  color: grey;
+  text-shadow: 1px 1px black;
+}
+
+.playerimages {
+  position: absolute;
+  visibility: visible;
+  left: 20px;
+  top: 300px;
+  height: 100px;
+  width: 150px;
+  z-index: 200;
+}
+img {
+  border: 5px;
+  border-color: black;
+}
+
+/*.playerimages{
+  float: right;
+}*/
+
+
+.gameboard {
+  width: 380px;
+  height:380px;
+  border:3px solid yellow;
+  padding: 5px;
+  position: relative;
+  /*z-index: 1;*/
+  /*padding: 0px;*/
+}
+
+.wrapper {
+  text-align: center;
+  width: 380px;
+  /*margin-left: auto;
+  margin-right: auto;*/
+  margin: 0 auto;
+  padding: 5px 5px 5px 5px;
+}
+
+.row1, .row2, .row3 {
+clear: both;
 }
 
 .box {
 
-  border:1px solid blue;
+  /*border:1px solid black;*/
+  /*text-align: center;*/
+  /*box-sizing: border-box;*/
+  /*position: absolute;*/
+  border-style: hidden;
   height: 100px;
   width: 100px;
-  display: inline-block;
-  margin:10px;
-  padding:10px;
-  color: brown;
-  background-color: bisque;
+  border-radius: 1em;
+  /*display: inline-block;*/
+  float: left;
+  margin:8px;
+  padding:5px;
+  color: black;
+  background-color: grey;
+  opacity: 0.4;
 }
 
-.row {
-  clear:left;
+
+
+.gameover {
+  background-image: url();
+  background-color: green;
+  visibility: collapse;
+}
+
+.gamedrawn {
+  background-color: bisque;
+
+}
+
+.resetbutton {
+  /*background-color:grey;*/
+  width: 60px;
+  height: 30px;
+  margin:0 auto;
+  padding: 5px;
+}
+
+.score1, .score2 {
+  width: 100px;
+  height: 50px;
 }
